--- a/stack/ReadMe
+++ b/stack/ReadMe
@@ -3,3 +3,4 @@ StackTest_2 - 배열을 사용하여 직접 구현 (미완성)
 StackTest_3 - 배열을 사용하여 직접 구현 (완성)
 StackTest_4 - 객체를 사용하여(LinkedList) 직접 구현
 StackTest_5 - 배열을 사용하여 직접 구현 (예외처리 추가)
+StackTest_6 - 객체를 사용하여(LinkedList) 직접 구현 (예외처리 추가)
