--- a/deque/ReadMe
+++ b/deque/ReadMe
@@ -1,3 +1,4 @@
 DequeTest - 배열로 구현한 덱. size(), frontRemove()에 오류 발생. 
 DequeTest_2 - 위 코드의 문제점 극복. (다만 한 가지 아쉬운 부분이 있다. 맨 처음 인덱스부터 시작하도록 설정하여 초반 frontPush에는 어려움이 있을 수 있다) + 좀 더 정확한 예외처리
 DequeTest_3 - 최종본.
+DequeTest_4 - 링크드리스트로 구현한 덱.
